--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="atr_72_training_manual">ATR 72 TRAINING MANUAL</string>
     <string name="button_text">Change Text</string>
     <string name="introduction_text">The ATR 72 is a twin turboprop powered aircraft designed to carry 64 to 74 passengers. It is built in cooperation by EADS(France) and ALENIA(Italy)</string>
+    <string name="productionChart">The fuselage and the tail are built in Naples(Italy) while the wing is assembled in ST NAZAIRE (France). Final assembly and flight tests take place in TOULOUSE (France).</string>
 </resources>
